changes for jake_template

--- a/src/jake_template/templates/main/index.html
+++ b/src/jake_template/templates/main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends "base.html" %}
+{% extends "main/base.html" %}
 {% load static %}
 {% static "" as baseUrl %}
 {% block content %}
