--- a/src/jake_template/templates/main/base.html
+++ b/src/jake_template/templates/main/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- {% load staticfiles %} -->
+{% load staticfiles %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -14,8 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <!-- custom css -->
-    <link rel="stylesheet" href="{% static 'jake/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'jake/css/jake.css' %}">
+    <link rel="stylesheet" href="{% static 'jake/css/jake_main.css' %}">
 
     <!-- bootstrap css (can comment out default bootstrap if wanting to go with another theme) -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
@@ -29,8 +28,7 @@
 
     <!-- custom js -->
     <script type="text/javascript" src="{% static 'jake/js/tabs_buttons.js' %}"></script>
-    <script type="text/javascript" src="{% static 'jake/js/get_requests.js' %}"></script>
-    <script type="text/javascript" src="{% static 'jake/js/post_requests.js' %}"></script>
+    <script type="text/javascript" src="{% static 'jake/js/ajax.js' %}"></script>
 
     <!-- popper js -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -45,8 +43,7 @@
     <nav>
 
     </nav>
-      <!-- {% block content %}
-      {% endblock content %} -->
-      <h2>hello there</h2>
+      {% block content %}
+      {% endblock content %}
   </body>
 </html>
