made a change to base.html

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -41,7 +41,8 @@
   </head>
   <body>
     <nav>
-
+      {% block navbar %}
+      {% endblock navbar %}
     </nav>
       {% block content %}
       {% endblock content %}
