commit from tycho

--- a/src/jake_template/templates/main/base.html
+++ b/src/jake_template/templates/main/base.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="{% static 'jake/css/jake_main.css' %}">
 
     <!-- bootstrap css (can comment out default bootstrap if wanting to go with another theme) -->
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}"> -->
     <!-- <link rel="stylesheet" href="{% static 'jake/css/darkly_theme.css' %}"> -->
-    <!-- <link rel="stylesheet" href="{% static 'jake/css/sandstone_theme.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'jake/css/sandstone_theme.css' %}">
 
 
     <!--********************************* js ********************************-->
