--- a/src/website/templates/website/home-content.html
+++ b/src/website/templates/website/home-content.html
@@ -1,4 +1,5 @@
-
+{% load static %}
+{% static "" as baseUrl %}
 <!-- Full Page Image Header with Vertically Centered Content -->
 <header class="masthead">
   <div class="container h-100">
@@ -33,7 +34,7 @@
     <div class="row">
       <div class="col-lg-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="{% static 'website/img/pexels-bike-holding.jpg' %}" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Mountain Bike Rentals</a>
@@ -44,7 +45,7 @@
       </div>
       <div class="col-lg-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="{% static 'website/img/alpine-peak.jpg' %}" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Paddle Board Rentals</a>
@@ -55,7 +56,7 @@
       </div>
       <div class="col-lg-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="{% static 'website/img/arch.jpg' %}" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Winter Rentals</a>
@@ -66,32 +67,10 @@
       </div>
       <div class="col-lg-6 mb-4">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+          <a href="#"><img class="card-img-top" src="{% static 'website/img/snowshoe.jpg' %}" alt=""></a>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#">Project Four</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 mb-4">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Five</a>
-            </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 mb-4">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Project Six</a>
             </h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
           </div>
