--- a/src/jake_template/static/jake/css/jake_main.css
+++ b/src/jake_template/static/jake/css/jake_main.css
@@ -107,7 +107,13 @@ html, body{
 .grey-background{
     background-color: rgba(150,150,150, 0.1);
 }
-
+.parallax{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: relative;
+}
 
 /*************************************/
 /***** content positioning *****/
