--- a/src/jake_template/templates/jake_template/baseloader.html
+++ b/src/jake_template/templates/jake_template/baseloader.html
@@ -46,3 +46,5 @@
 
 <!-- Bootstrap js (this comes last)-->
 <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
