--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -17,7 +17,8 @@
     <div class="container py-5">
         <h1 class="font-weight-light">Go Live It</h1>
         <p>
-            Peak Outdoor Adventures is a small, family run business.  Our goal is
+            Peak Outdoor Adventures is a family run business.  We're passionate
+            about the outdoors and especially the Utah back country. Our goal is
             for you to have the best experience possible with affordable, quality
             equipment.  The only thing left to do in your adventure is to go live it!
         </p>
@@ -79,12 +80,40 @@
                         <li>Full Suspension</li>
                         <li>Dropper Post</li>
                         <li>Hydraulic Disk Brakes</li>
-                        <li>3-Speed Electronic Peddal Assist</li>
+                        <li>3-Speed Electronic Pedal Assist</li>
                     </ul>
                 </div>
             </div>
             <!-- /.row -->
         </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <h2 class="centered">
+                Call/Text
+            </h2>
+        </div>
+        <section id="contact">
+            <div class="row">
+                <div class="col text-right">
+                    <h4>Utah County</h4>
+                </div>
+                <div class="col text-left">
+                    <h4>801-391-3013</h4>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col text-right">
+                    <h4>Richfield</h4>
+                </div>
+                <div class="col text-left">
+                    <h4>435-896-7259</h4>
+                </div>
+            </div>
+
+        </section>
+
     </div>
     <div class="container">
         <div class="row py-5">
