changes to bike descriptions

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -45,9 +45,11 @@
                 <h4 class="centered">$25 - day</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
-                        <li>27"x4", Tubeless Tires</li>
-                        <li>Dropper Post</li>
-                        <li>Hydraulic Disk Brakes</li>
+                        <li>26"x4.6", Maxxis Tires</li>
+                        <li>Rockshox Fork With Lockout</li>
+                        <li>KS Dropper Post</li>
+                        <li>SRAM NX 1x12 Drive Train</li>
+                        <li>Shimano Deore Hydraulic Disk Brakes</li>
                     </ul>
                 </div>
             </div>
@@ -60,27 +62,30 @@
                 <h4 class="centered">$35 - day</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
-                        <li>29"x2.5", Tubeless Tires</li>
-                        <li>Full suspension</li>
-                        <li>Dropper Post</li>
-                        <li>Hydraulic Disk Brakes</li>
+                        <li>27.5" or 29" Maxxis Tires</li>
+                        <li>HAL (Highly Active Link) Suspension Rockshox w/Front and Rear Lockout</li>
+                        <li>KS Dropper Post</li>
+                        <li>SRAM 1x12 Drive Train</li>
+                        <li>Shimano deore Hydraulic Disk Brakes</li>
                     </ul>
                 </div>
             </div>
 
             <div class="col-lg-4 px-2 py-2">
-                <h2 class="centered">e-Boost</h2>
+                <h2 class="centered">Full Suspension E-Boost</h2>
                 <div class="bike-image"
                     style="background-image: url({% static 'website/img/biking/ebike.jpg' %})">
                 </div>
                 <h4 class="centered">$60 - day</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
-                        <li>29"x2.5", Tubeless Tires</li>
-                        <li>Full Suspension</li>
-                        <li>Dropper Post</li>
-                        <li>Hydraulic Disk Brakes</li>
-                        <li>3-Speed Electronic Pedal Assist</li>
+                        <li>27"x2.8", Maxxis Tires</li>
+                        <li>HAL (Highly Active Link Suspension) Rockshox w/Front and Rear Lockout</li>
+                        <li>KS Dropper Post</li>
+                        <li>Shimano SLX 1x12 gears</li>
+                        <li>Shimano Deore Hydraulic Disk Brakes</li>
+                        <li>Shimano STEPS Mid Drive Motor</li>
+                        <li>3 Levels of Electronic Assist</li>
                     </ul>
                 </div>
             </div>
