wording changes on bikes, email added

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -63,7 +63,7 @@
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
                         <li>27.5" or 29" Maxxis Tires</li>
-                        <li>HAL (Highly Active Link) Suspension Rockshox w/Front and Rear Lockout</li>
+                        <li>HAL (Highly Active Link Suspension) Rockshox w/Front and Rear Lockout</li>
                         <li>KS Dropper Post</li>
                         <li>SRAM 1x12 Drive Train</li>
                         <li>Shimano deore Hydraulic Disk Brakes</li>
@@ -79,7 +79,7 @@
                 <h4 class="centered">$60 - day</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
-                        <li>27"x2.8", Maxxis Tires</li>
+                        <li>27.5"x2.8", Maxxis Tires</li>
                         <li>HAL (Highly Active Link Suspension) Rockshox w/Front and Rear Lockout</li>
                         <li>KS Dropper Post</li>
                         <li>Shimano SLX 1x12 gears</li>
@@ -92,6 +92,16 @@
             <!-- /.row -->
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <p>
+                We require all bike rentals to be transported with a proper bike rack or
+                tailgate pad where applicable.  Two and Four-place racks are also available
+                for rent for $15 per day.
+            </p>
+        </div>
+    </div>
+
     <div class="container">
         <div class="row">
             <h2 class="centered">
@@ -118,6 +128,15 @@
             </div>
 
         </section>
+        <br>
+        <div class="row">
+            <h2>Email</h2>
+        </div>
+        <div class="row">
+            <div class="col centered">
+                peakoutdooradventures@gmail.com
+            </div>
+        </div>
 
     </div>
     <div class="container">
