--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -101,7 +101,7 @@
             </p>
         </div>
     </div>
-
+    <br>
     <div class="container">
         <div class="row">
             <h2 class="centered">
@@ -130,7 +130,7 @@
         </section>
         <br>
         <div class="row">
-            <h2>Email</h2>
+            <h2 class="centered">Email</h2>
         </div>
         <div class="row">
             <div class="col centered">
