--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -129,14 +129,16 @@
 
         </section>
         <br>
-        <div class="row">
-            <h2 class="centered">Email</h2>
-        </div>
-        <div class="row">
-            <div class="col centered">
-                peakoutdooradventures@gmail.com
+        <section>
+            <div class="row">
+                <h2 class="centered">Email</h2>
             </div>
-        </div>
+            <div class="row">
+                <div class="col centered">
+                    peakoutdooradventures@gmail.com
+                </div>
+            </div>
+        </section>
 
     </div>
     <div class="container">
