changes to home page pricing info

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -42,7 +42,9 @@
                 <div class="bike-image"
                     style="background-image: url({% static 'website/img/biking/fat-tire.jpg' %})">
                 </div>
-                <h4 class="centered">$25 - day</h4>
+                <h4 class="centered">$25 / 4 hrs</h4>
+                <h4 class="centered">$35 / 8 hrs</h4>
+                <h4 class="centered">$45 / 24 hrs</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
                         <li>26"x4.6", Maxxis Tires</li>
@@ -59,7 +61,9 @@
                 <div class="bike-image"
                     style="background-image: url({% static 'website/img/biking/full-suspension.jpg' %})">
                 </div>
-                <h4 class="centered">$35 - day</h4>
+                <h4 class="centered">$35 / 4 hrs</h4>
+                <h4 class="centered">$50 / 8 hrs</h4>
+                <h4 class="centered">$60 / 24 hrs</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
                         <li>27.5" or 29" Maxxis Tires</li>
@@ -76,7 +80,9 @@
                 <div class="bike-image"
                     style="background-image: url({% static 'website/img/biking/ebike.jpg' %})">
                 </div>
-                <h4 class="centered">$60 - day</h4>
+                <h4 class="centered">$45 / 4 hrs</h4>
+                <h4 class="centered">$65 / 8 hrs</h4>
+                <h4 class="centered">$85 / 24 hrs</h4>
                 <div class="bike-stats col-sm-6 py-2 centered">
                     <ul class="text-left">
                         <li>27.5"x2.8", Maxxis Tires</li>
@@ -94,13 +100,72 @@
     </div>
     <div class="container">
         <div class="row">
+            <h2 class="text-left"><strong>Weekend special (or 2.5 days)</strong></h2>
+        </div>
+        <div class="row">
+            <h4>10% off any 2-day rate</h4>
+        </div>
+        <div class="row">
+            <p>
+                Example: pick up on a Friday afternoon and return the following Monday morning,
+                or (pick up any day) pick up on a Tuesday morning and return 2.5 days later
+                for 10% less than the price of two days.
+            </p>
+            <p class="">
+            <em>
+                Eg. Full suspension rate for 2 days: $120 - 10% = $108
+            </em>
+            </p>
+        </div>
+        <div class="container">
+            <h4 class="text-center">
+                Take a weekend trip to Moab or St. George or wherever you want to ride!!
+            </h4>
+        </div>
+        <br>
+        <div class="row">
+            <h2><strong>MULTI-BIKE DISCOUNT</strong></h2>
+        </div>
+        <div class="row">
+            <h4>10% off any 2nd bike, 15% off 3rd bike, 20% off 4th bike</h4>
+        </div>
+        <div class="row">
+
+        </div>
+
+
+    </div>
+    <br><br>
+    <div class="container">
+        <div class="row">
             <p>
                 We require all bike rentals to be transported with a proper bike rack or
-                tailgate pad where applicable.  Two and Four-place racks are also available
-                for rent for $15 per day.
+                tailgate pad where applicable.  We do not allow bikes to be transported in a trunk
+                or laying in the back of a pickup.
+                <!-- Two and Four-place racks are also available for rent for $15 per day. -->
+            </p>
+            <p>
+                <h4><strong>E bikes must <u>not</u> be transported on a roof or trunk rack</strong></h4>
             </p>
         </div>
     </div>
+    <div class="container">
+        <ul>
+            <li>2 or 4 place hitch mount bike rack: $15 / day (free with two or more bikes)</li>
+            <li>6 bike tailgate pad: $5/day (free with two or more bikes)</li>
+            <li>All bike rentals include helmets, lock, and air pump</li>
+            <li>
+                Optional insurance: $10 per bike
+                <ul>
+                    <li>good for 2 days coverage per bike</li>
+                    <li>covers up to $300 damage which occurred during riding</li>
+                    <li><u>does not</u> cover theft, damage or loss while in your possesion</li>
+                    <li><u>does not</u> cover damage while transporting</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <br>
     <br>
     <div class="container">
         <div class="row">
@@ -108,30 +173,34 @@
                 Call/Text
             </h2>
         </div>
+
         <section id="contact">
             <div class="row">
                 <div class="col text-right">
                     <h4>Utah County</h4>
                 </div>
                 <div class="col text-left">
-                    <h4>801-391-3013</h4>
+                    <h4>801-854-8348</h4>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col text-right">
-                    <h4>Richfield</h4>
+                    <!-- <h4>Utah County</h4> -->
                 </div>
                 <div class="col text-left">
-                    <h4>435-896-7259</h4>
+                    <h4>801-391-3013</h4>
                 </div>
             </div>
 
         </section>
         <br>
+
         <section>
             <div class="row">
-                <h2 class="centered">Email</h2>
+                <h2 class="centered">
+                    Email
+                </h2>
             </div>
             <div class="row">
                 <div class="col centered">
