fixed side padding in containers for home page

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -98,7 +98,7 @@
             <!-- /.row -->
         </div>
     </div>
-    <div class="container">
+    <div class="container px-5">
         <div class="row">
             <h2 class="text-left"><strong>Weekend special (or 2.5 days)</strong></h2>
         </div>
@@ -117,7 +117,7 @@
             </em>
             </p>
         </div>
-        <div class="container">
+        <div class="container py-5">
             <h4 class="text-center">
                 Take a weekend trip to Moab or St. George or wherever you want to ride!!
             </h4>
@@ -132,11 +132,11 @@
         <div class="row">
 
         </div>
-
-
     </div>
+
     <br><br>
-    <div class="container">
+
+    <div class="container px-5">
         <div class="row">
             <p>
                 We require all bike rentals to be transported with a proper bike rack or
@@ -148,8 +148,7 @@
                 <h4><strong>E bikes must <u>not</u> be transported on a roof or trunk rack</strong></h4>
             </p>
         </div>
-    </div>
-    <div class="container">
+
         <ul>
             <li>2 or 4 place hitch mount bike rack: $15 / day (free with two or more bikes)</li>
             <li>6 bike tailgate pad: $5/day (free with two or more bikes)</li>
@@ -167,7 +166,7 @@
     </div>
     <br>
     <br>
-    <div class="container">
+    <div class="container py-5">
         <div class="row">
             <h2 class="centered">
                 Call/Text
