made change for only 1 number on site

--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -174,18 +174,18 @@
         </div>
 
         <section id="contact">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col text-right">
                     <h4>Utah County</h4>
                 </div>
                 <div class="col text-left">
                     <h4>801-854-8348</h4>
                 </div>
-            </div>
+            </div> -->
 
             <div class="row">
                 <div class="col text-right">
-                    <!-- <h4>Utah County</h4> -->
+                    <h4>Utah County</h4>
                 </div>
                 <div class="col text-left">
                     <h4>801-391-3013</h4>
