--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -188,7 +188,7 @@
                     <h4>Utah County</h4>
                 </div>
                 <div class="col text-left">
-                    <h4>801-391-3013</h4>
+                    <h4><a href="385-309-3009">(385) 309-3009</a></h4>
                 </div>
             </div>
 
